crates/elenchus-compiler/tests/snapshots/errors__parse_error_is_wrapped_with_source.snap
---
source: crates/elenchus-compiler/tests/errors.rs
expression: "format!(\"{e}\")"
---
RESULT: 1 syntax error in main.vrf

FACT  (1 problem)
  syntax  : FACT [<domain>.]<Subject> <predicate> [<object>]
  example : FACT socrates is human
    line 1, col 11 - unexpected text after the FACT atom
      | FACT a b c d
      |           ^^
